--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -21,5 +21,5 @@ jobs:
               run: npm install
             - run: node app.js
               env:
-                JD_COOKIE: ${{ secrets.JD_COOKIE }}
+                KKMH_COOKIE: ${{ secrets.KKMH_COOKIE}}
                 PUSH_KEY: ${{ secrets.PUSH_KEY }}
