--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -6,6 +6,8 @@ on:
       - master
   schedule:
     - cron: "20 22 * * *"
+  watch:
+    types: [started]
 jobs:
   build:
     runs-on: ubuntu-latest
